# pycounts

./: CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py  example.ipynb
tests/: test_pycounts.py
